# renderer-benchmark-lab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  benchmark.smoke.toml  benchmark.toml  pyproject.toml
.github/workflows/: benchmark.yml
adapters/fulgur/: Cargo.toml
adapters/fulgur/src/: main.rs
docs/: ADAPTER_PROTOCOL.md  ARCHITECTURE.md  DEVELOPMENT.md  REUSABLE_WORKFLOW.md
fixtures/catalogue/: document.html
fixtures/contract/: document.html
fixtures/invoice/: document.html
fixtures/newsletter/: document.html
fixtures/small/: document.html
fixtures/tiny/: document.html
src/renderer_benchmark_lab/: __init__.py  budgets.py  chromium_adapter.py  ci_export.py  cli.py  config.py  metrics.py  mock_adapter.py  protocol.py  report.py  runner.py  wkhtml_adapter.py
src/renderer_benchmark_lab/dashboard/: app.js  index.html  style.css
tests/: test_chromium_adapter.py  test_ci_pipeline.py  test_core.py  test_dashboard.py  test_report.py
tests/dashboard/: app.test.js
